--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         en meer werk verzet ik de opleiding echt erg leuk ga vinden en het makkelijker word om er werk van te maken.<br> Ik wil later richting de ESA (European Space Agency) te gaan omdat mijn grootste interesse samen met technologie toch de ruimte is.<br>Om
         daar werk van te maken lijkt me erg gaaf, alleen leek astroloog me niks.<br>Ik ben erg geinterreseerd in automatisatie. Ik vind het cool om te zien hoe we steeds slimmere manieren vinden om robots te gebruiken om ons leven makkelijker te maken.<br>        De software die bedacht word om een soort brein na te maken om een robot te laten denken fascineert me.<br> Daarnaast ligt mijn interesse ook bij het proces van het maken van een succesvolle game. Ik heb zelf vorig jaar iets gemaakt wat op een
         game leek en dit is niet te vergelijken met het serieuze werk.<br>De dedicatie en werk dat er soms ingestopt word is enorm en er komt heel veel bij kijken. </p>
-    <img style="margin-left: 200px;" src="ESA-logo.jpg" alt="esa-logo" height="300px;">
-    <img style="margin-left: 200px;" src="automatiesch.jpg" alt="automatisch" height="300px;">
-    <img style="margin-left: 200px;" src="Game-Development.png" alt="Game-Development" height="300px;"><br><br><br>
-    <img style="margin-left: 200px;" src="sms.jpg" alt="Santa-Monica-Studios" height="641px;">
-    <img style="margin-left: 200px;" src="satellite.jpg" alt="Satellite" height="641px;">
+    <img class="hp-img" src="ESA-logo.jpg" alt="esa-logo" height="300px;">
+    <img class="hp-img" src="automatiesch.jpg" alt="automatisch" height="300px;">
+    <img class="hp-img" src="Game-Development.png" alt="Game-Development" height="300px;"><br><br><br>
+    <img class="hp-img" src="sms.jpg" alt="Santa-Monica-Studios" height="641px;">
+    <img class="hp-img" src="satellite.jpg" alt="Satellite" height="641px;">
 </body>
 
 </html>
