--- a/dashboard.html
+++ b/dashboard.html
@@ -22,13 +22,13 @@
         <caption>Jaar 1</caption>
         <tr>
             <th rowspan="2" class="table-blok">Blok 1</th>
-            <th class="table-active">Opleidings- en beroepsorientatie</th>
-            <th class="table-inactive">Computer Science Basics</th>
+            <th class="table-complete">Opleidings- en beroepsorientatie</th>
+            <th class="table-active">Computer Science Basics</th>
             <th class="table-inactive">Programming Basics</th>
         </tr>
         <tr>
-            <td class ="table-active2">OBO<br>CU75001<br>2,5 EC</td>
-            <td class="table-inactive2">CBA<br>CU75002<br>7,5 EC</td>
+            <td class ="table-complete2">OBO<br>CU75001<br>2,5 EC</td>
+            <td class="table-active2">CBA<br>CU75002<br>7,5 EC</td>
             <td class="table-inactive2">PBA<br>CU75003<br>5 EC</td>
         </tr>
         <tr>
