New Page: Motivation, Filled in and all!

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Dashboard</title>
 </head>
-<a href="https://hz.nl/secure">
-    <img class="sticky" src="hz-logo.png" alt="HZ-logo" width="170" height="50">
+<a href="https://hz.nl/secure" target="_blank">
+    <img class="sticky" src="pictures/hz-logo.png" alt="HZ-logo" width="170" height="50">
 </a>
 <div class="sidenav">
     <a href="index.html">Homepagina</a>
     <a href="profile.html">Profiel</a>
+    <a href="motivation.html">Motivatie</a>
     <a href="dashboard.html">Dashboard</a>
     <a href="faq.html">FAQ</a>
 </div>
@@ -22,54 +23,54 @@
         <caption>Jaar 1</caption>
         <tr>
             <th rowspan="2" class="table-blok">Blok 1</th>
-            <th class="table-active">Opleidings- en beroepsorientatie</th>
-            <th class="table-inactive">Computer Science Basics</th>
-            <th class="table-inactive">Programming Basics</th>
+            <th class="table-main-passed">Opleidings- en beroepsorientatie</th>
+            <th class="table-main-active">Computer Science Basics</th>
+            <th class="table-main-active">Programming Basics</th>
         </tr>
         <tr>
-            <td class ="table-active2">OBO<br>CU75001<br>2,5 EC</td>
-            <td class="table-inactive2">CBA<br>CU75002<br>7,5 EC</td>
-            <td class="table-inactive2">PBA<br>CU75003<br>5 EC</td>
+            <td class="table-sub-passed">OBO<br>CU75001<br>2,5 EC</td>
+            <td class="table-sub-active">CBA<br>CU75002<br>7,5 EC</td>
+            <td class="table-sub-active">PBA<br>CU75003<br>5 EC</td>
         </tr>
         <tr>
             <td rowspan="2" class="table-blok">Blok 2
             </td>
-            <td class="table-inactive">Professional Skills 1</td>
-            <td class="table-inactive">HZ Personality 1</td>
-            <td class="table-inactive">Object-oriented Programming</td>
+            <td class="table-main-inactive">Professional Skills 1</td>
+            <td class="table-main-inactive">HZ Personality 1</td>
+            <td class="table-main-inactive">Object-oriented Programming</td>
         </tr>
         <tr>
-            <td class="table-inactive2">PSK1<br>CU750015<br>2,5 EC</td>
-            <td class="table-inactive2">HZP1<br>CU20096<br>2,5 EC</td>
-            <td class="table-inactive2">OPR<br>CU75004<br>10 EC</td>
+            <td class="table-sub-inactive">PSK1<br>CU750015<br>2,5 EC</td>
+            <td class="table-sub-inactive">HZP1<br>CU20096<br>2,5 EC</td>
+            <td class="table-sub-inactive">OPR<br>CU75004<br>10 EC</td>
         </tr>
         <tr>
             <td rowspan="2" class="table-blok">Blok 3
             </td>
-            <td class="table-inactive">Professional Skills 2</td>
-            <td class="table-inactive">Professionele werkplek</td>
-            <td class="table-inactive">Framework development 1</td>
-            <td class="table-inactive">Framework project 1</td>
+            <td class="table-main-inactive">Professional Skills 2</td>
+            <td class="table-main-inactive">Professionele werkplek</td>
+            <td class="table-main-inactive">Framework development 1</td>
+            <td class="table-main-inactive">Framework project 1</td>
         </tr>
         <tr>
-            <td class="table-inactive2">PSK2<br>CU75006<br>2,5 EC</td>
-            <td class="table-inactive2">PWE<br>CU75007<br>2,5 EC</td>
-            <td class="table-inactive2">FDE1<br>CU75008<br>5 EC</td>
-            <td class="table-inactive2">FPR1<br>CU75009<br>5 EC</td>
+            <td class="table-sub-inactive">PSK2<br>CU75006<br>2,5 EC</td>
+            <td class="table-sub-inactive">PWE<br>CU75007<br>2,5 EC</td>
+            <td class="table-sub-inactive">FDE1<br>CU75008<br>5 EC</td>
+            <td class="table-sub-inactive">FPR1<br>CU75009<br>5 EC</td>
         </tr>
         <tr>
             <td rowspan="2" class="table-blok">Blok 4
             </td>
-            <td class="table-inactive">Professional Skills 3</td>
-            <td class="table-inactive">IT Personality 1</td>
-            <td class="table-inactive">Framework development 2</td>
-            <td class="table-inactive">Framework project 2</td>
+            <td class="table-main-inactive">Professional Skills 3</td>
+            <td class="table-main-inactive">IT Personality 1</td>
+            <td class="table-main-inactive">Framework development 2</td>
+            <td class="table-main-inactive">Framework project 2</td>
         </tr>
         <tr>
-            <td class="table-inactive2">PSK3<br>CU750010<br>2,5 EC</td>
-            <td class="table-inactive2">ITP1<br>CU22128<br>2,5 EC</td>
-            <td class="table-inactive2">FDE2<br>CU75012<br>5 EC</td>
-            <td class="table-inactive2">FPR2<br>CU75011<br>5 EC</td>
+            <td class="table-sub-inactive">PSK3<br>CU750010<br>2,5 EC</td>
+            <td class="table-sub-inactive">ITP1<br>CU22128<br>2,5 EC</td>
+            <td class="table-sub-inactive">FDE2<br>CU75012<br>5 EC</td>
+            <td class="table-sub-inactive">FPR2<br>CU75011<br>5 EC</td>
         </tr>
     </table>
     <p class="p-blue">Blauw betekent begonnen maar niet afgerond</p>
@@ -80,11 +81,17 @@
     <h1>TOTALE EC'S: 0 EC!<br>NODIGE EC'S: 45 EC'S!<br>NOG NODIG: 45 EC'S!</h1><br><br><br>
 
     <h1>Studeer Handleiding!</h1>
-    <a class="linkdb" href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen" target="_blank">Onderwijs-en examenregelingen</a><br>
+    <a class="linkdb" href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen"
+        target="_blank">Onderwijs-en examenregelingen</a><br>
     <a class="linkdb" href="https://learn.hz.nl/my/" target="_blank">Learn</a><br>
-    <a class="linkdb" href="https://teams.microsoft.com/_?lm=deeplink&lmsrc=homePageWeb&cmpid=WebSignIn#/school//?ctx=teamsGrid" target="_blank">Teams</a><br>
-    <a class="linkdb" href="https://topdesk.hz.nl/tas/public/ssp/52a63378-addd-4b21-b808-571200fd8d0c" target="_blank">SelfService Portal</a><br>
-    <a class="linkdb" href="https://apps.hz.nl/rooster/Default.aspx?menu=110239084080170187101166073161084015193018067002" target="_blank">Rooster</a><br>
+    <a class="linkdb"
+        href="https://teams.microsoft.com/_?lm=deeplink&lmsrc=homePageWeb&cmpid=WebSignIn#/school//?ctx=teamsGrid"
+        target="_blank">Teams</a><br>
+    <a class="linkdb" href="https://topdesk.hz.nl/tas/public/ssp/52a63378-addd-4b21-b808-571200fd8d0c"
+        target="_blank">SelfService Portal</a><br>
+    <a class="linkdb"
+        href="https://apps.hz.nl/rooster/Default.aspx?menu=110239084080170187101166073161084015193018067002"
+        target="_blank">Rooster</a><br>
     <a class="linkdb" href="https://apps.hz.nl/angular/studievoortgang/studiestatus" target="_blank">Studievoortgang</a>
 
 </body>
