--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Homepagina</title>
 </head>
-<a href="https://hz.nl/secure">
-    <img class="sticky" src="hz-logo.png" alt="HZ-logo" width="170" height="50">
+<a href="https://hz.nl/secure" target="_blank">
+    <img class="sticky" src="pictures/hz-logo.png" alt="HZ-logo" width="170" height="50">
 </a>
 
 <div class="sidenav">
     <a href="index.html">Homepagina</a>
     <a href="profile.html">Profiel</a>
+    <a href="motivation.html">Motivatie</a>
     <a href="dashboard.html">Dashboard</a>
     <a href="faq.html">FAQ</a>
 </div>
@@ -22,17 +23,29 @@
     <h1>Homepagina</h1>
     <h2>Welkom op de webpagina van Jurgen van Fraeijenhove!</h2>
     <p>
-        Ik heb de ICT opleiding in eerste instantie gekozen omdat je er veel kanten mee op kan.<br> In het eerste jaar heb ik het niveau onderschat en veel te weinig moeite gestopt in het begrijpen van de leerstof.
-        <br> Ik dacht dat ik het met de tijd mee wel op zou pikken en besteedde niet veel moeite aan het proberen te begrijpen van wat ik aan het doen was.<br> Alles in combinatie heeft ervoor gezorgd dat ik vorig jaar besloten heb opnieuw te beginnen.
-        Nieuwe start met meer motivatie en gelukkig geen verdere problemen meer.<br> Ik wilde deze opleiding toch opnieuw doen omdat ik weet dat ik het beter kan dan ik heb laten zien, ik heb alleen teveel basis gemist.<br> Ik denk dat als ik het ga begrijpen
-        en meer werk verzet ik de opleiding echt erg leuk ga vinden en het makkelijker word om er werk van te maken.<br> Ik wil later richting de ESA (European Space Agency) te gaan omdat mijn grootste interesse samen met technologie toch de ruimte is.<br>Om
-        daar werk van te maken lijkt me erg gaaf, alleen leek astroloog me niks.<br>Ik ben erg geinterreseerd in automatisatie. Ik vind het cool om te zien hoe we steeds slimmere manieren vinden om robots te gebruiken om ons leven makkelijker te maken.<br>        De software die bedacht word om een soort brein na te maken om een robot te laten denken fascineert me.<br> Daarnaast ligt mijn interesse ook bij het proces van het maken van een succesvolle game. Ik heb zelf vorig jaar iets gemaakt wat op een
-        game leek en dit is niet te vergelijken met het serieuze werk.<br>De dedicatie en werk dat er soms ingestopt word is enorm en er komt heel veel bij kijken. </p>
-    <img class="hp-img" src="ESA-logo.jpg" alt="esa-logo" height="300px;">
-    <img class="hp-img" src="automatiesch.jpg" alt="automatisch" height="300px;">
-    <img class="hp-img" src="Game-Development.png" alt="Game-Development" height="300px;"><br><br><br>
-    <img class="hp-img" src="sms.jpg" alt="Santa-Monica-Studios" height="641px;">
-    <img class="hp-img" src="satellite.jpg" alt="Satellite" height="641px;">
+        Ik heb de ICT opleiding in eerste instantie gekozen omdat je er veel kanten mee op kan.<br> In het eerste jaar
+        heb ik het niveau onderschat en veel te weinig moeite gestopt in het begrijpen van de leerstof.
+        <br> Ik dacht dat ik het met de tijd mee wel op zou pikken en besteedde niet veel moeite aan het proberen te
+        begrijpen van wat ik aan het doen was.<br> Alles in combinatie heeft ervoor gezorgd dat ik vorig jaar besloten
+        heb opnieuw te beginnen.
+        Nieuwe start met meer motivatie en gelukkig geen verdere problemen meer.<br> Ik wilde deze opleiding toch
+        opnieuw doen omdat ik weet dat ik het beter kan dan ik heb laten zien, ik heb alleen teveel basis gemist.<br> Ik
+        denk dat als ik het ga begrijpen
+        en meer werk verzet ik de opleiding echt erg leuk ga vinden en het makkelijker word om er werk van te maken.<br>
+        Ik wil later richting de ESA (European Space Agency) te gaan omdat mijn grootste interesse samen met technologie
+        toch de ruimte is.<br>Om
+        daar werk van te maken lijkt me erg gaaf, alleen leek astroloog me niks.<br>Ik ben erg geinterreseerd in
+        automatisatie. Ik vind het cool om te zien hoe we steeds slimmere manieren vinden om robots te gebruiken om ons
+        leven makkelijker te maken.<br> De software die bedacht word om een soort brein na te maken om een robot te
+        laten denken fascineert me.<br> Daarnaast ligt mijn interesse ook bij het proces van het maken van een
+        succesvolle game. Ik heb zelf vorig jaar iets gemaakt wat op een
+        game leek en dit is niet te vergelijken met het serieuze werk.<br>De dedicatie en werk dat er soms ingestopt
+        word is enorm en er komt heel veel bij kijken. </p>
+    <img class="hp-img" src="pictures/ESA-logo.jpg" alt="esa-logo" height="200px;">
+    <img class="hp-img" src="pictures/automatiesch.jpg" alt="automatisch" height="200px;">
+    <img class="hp-img" src="pictures/Game-Development.png" alt="Game-Development" height="200px;">
+    <img class="hp-img" src="pictures/sms.jpg" alt="Santa-Monica-Studios" height="200px;">
+    <img class="hp-img" src="pictures/satellite.jpg" alt="Satellite" height="200px;">
 </body>
 
 </html>
