Added game of rock paper scissors

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,35 +16,37 @@
     <a href="motivation.html">Motivatie</a>
     <a href="dashboard.html">Dashboard</a>
     <a href="faq.html">FAQ</a>
+    <a href="rps.html">Steen papier schaar</a>
 </div>
 
 <body>
-    <table>
+    <table class="dbtable">
         <caption>Jaar 1</caption>
-        <tr>
+        <tr id="dbtr">
             <th rowspan="2" class="table-blok">Blok 1</th>
             <th class="table-main-passed">Opleidings- en beroepsorientatie</th>
             <th class="table-main-active">Computer Science Basics</th>
             <th class="table-main-active">Programming Basics</th>
+            <th rowspan="4" class="table-sub-inactive"></th>
         </tr>
-        <tr>
+        <tr id="dbtr">
             <td class="table-sub-passed">OBO<br>CU75001<br>2,5 EC</td>
             <td class="table-sub-active">CBA<br>CU75002<br>7,5 EC</td>
             <td class="table-sub-active">PBA<br>CU75003<br>5 EC</td>
         </tr>
-        <tr>
+        <tr id="dbtr">
             <td rowspan="2" class="table-blok">Blok 2
             </td>
             <td class="table-main-inactive">Professional Skills 1</td>
             <td class="table-main-inactive">HZ Personality 1</td>
             <td class="table-main-inactive">Object-oriented Programming</td>
         </tr>
-        <tr>
+        <tr id="dbtr">
             <td class="table-sub-inactive">PSK1<br>CU750015<br>2,5 EC</td>
             <td class="table-sub-inactive">HZP1<br>CU20096<br>2,5 EC</td>
             <td class="table-sub-inactive">OPR<br>CU75004<br>10 EC</td>
         </tr>
-        <tr>
+        <tr id="dbtr">
             <td rowspan="2" class="table-blok">Blok 3
             </td>
             <td class="table-main-inactive">Professional Skills 2</td>
@@ -52,13 +54,13 @@
             <td class="table-main-inactive">Framework development 1</td>
             <td class="table-main-inactive">Framework project 1</td>
         </tr>
-        <tr>
+        <tr id="dbtr">
             <td class="table-sub-inactive">PSK2<br>CU75006<br>2,5 EC</td>
             <td class="table-sub-inactive">PWE<br>CU75007<br>2,5 EC</td>
             <td class="table-sub-inactive">FDE1<br>CU75008<br>5 EC</td>
             <td class="table-sub-inactive">FPR1<br>CU75009<br>5 EC</td>
         </tr>
-        <tr>
+        <tr id="dbtr">
             <td rowspan="2" class="table-blok">Blok 4
             </td>
             <td class="table-main-inactive">Professional Skills 3</td>
@@ -66,7 +68,7 @@
             <td class="table-main-inactive">Framework development 2</td>
             <td class="table-main-inactive">Framework project 2</td>
         </tr>
-        <tr>
+        <tr id="dbtr">
             <td class="table-sub-inactive">PSK3<br>CU750010<br>2,5 EC</td>
             <td class="table-sub-inactive">ITP1<br>CU22128<br>2,5 EC</td>
             <td class="table-sub-inactive">FDE2<br>CU75012<br>5 EC</td>
@@ -78,20 +80,14 @@
     <p class="p-green">Groen betekent gehaald</p>
     <p class="p-red">Rood betekent niet gehaald</p>
 
-    <h1>TOTALE EC'S: 0 EC!<br>NODIGE EC'S: 45 EC'S!<br>NOG NODIG: 45 EC'S!</h1><br><br><br>
+    <h1 class="h1">TOTALE EC'S: 0 EC!<br>NODIGE EC'S: 45 EC'S!<br>NOG NODIG: 45 EC'S!</h1><br><br><br>
 
-    <h1>Studeer Handleiding!</h1>
-    <a class="linkdb" href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen"
-        target="_blank">Onderwijs-en examenregelingen</a><br>
+    <h1 class="h1">Studeer Handleiding!</h1>
+    <a class="linkdb" href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen" target="_blank">Onderwijs-en examenregelingen</a><br>
     <a class="linkdb" href="https://learn.hz.nl/my/" target="_blank">Learn</a><br>
-    <a class="linkdb"
-        href="https://teams.microsoft.com/_?lm=deeplink&lmsrc=homePageWeb&cmpid=WebSignIn#/school//?ctx=teamsGrid"
-        target="_blank">Teams</a><br>
-    <a class="linkdb" href="https://topdesk.hz.nl/tas/public/ssp/52a63378-addd-4b21-b808-571200fd8d0c"
-        target="_blank">SelfService Portal</a><br>
-    <a class="linkdb"
-        href="https://apps.hz.nl/rooster/Default.aspx?menu=110239084080170187101166073161084015193018067002"
-        target="_blank">Rooster</a><br>
+    <a class="linkdb" href="https://teams.microsoft.com/_?lm=deeplink&lmsrc=homePageWeb&cmpid=WebSignIn#/school//?ctx=teamsGrid" target="_blank">Teams</a><br>
+    <a class="linkdb" href="https://topdesk.hz.nl/tas/public/ssp/52a63378-addd-4b21-b808-571200fd8d0c" target="_blank">SelfService Portal</a><br>
+    <a class="linkdb" href="https://apps.hz.nl/rooster/Default.aspx?menu=110239084080170187101166073161084015193018067002" target="_blank">Rooster</a><br>
     <a class="linkdb" href="https://apps.hz.nl/angular/studievoortgang/studiestatus" target="_blank">Studievoortgang</a>
 
 </body>
