Added Profession tab and updated dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,7 @@
     <a href="index.html">Homepagina</a>
     <a href="profile.html">Profiel</a>
     <a href="motivation.html">Motivatie</a>
+    <a href="profession.html">Professie</a>
     <a href="dashboard.html">Dashboard</a>
     <a href="faq.html">FAQ</a>
     <a href="rps.html">Steen papier schaar</a>
