--- a/motivation.html
+++ b/motivation.html
@@ -14,6 +14,7 @@
     <a href="index.html">Homepagina</a>
     <a href="profile.html">Profiel</a>
     <a href="motivation.html">Motivatie</a>
+    <a href="profession.html">Professie</a>
     <a href="dashboard.html">Dashboard</a>
     <a href="faq.html">FAQ</a>
     <a href="rps.html">Steen papier schaar</a>
@@ -62,7 +63,8 @@
             Er zijn experimenten bij bedrijven die experimenteren met wanneer werkers meer gemotiveerd zijn. Conclusie. Als je geen schema hebt, geen vaste tijden, je mag zelf bepalen wat je doet, waar je het doet en hoe je het doet. Dan gaat de productiviteit omhoog,
             de werkersbetrokkenheid omhoog, gaat de werknemer tevredenheid omhoog maar de omzet omlaag.<br><br> Er is een verkeerde relatie tussen wat de wetenschap weet en wat het bedrijfsleven doet.”. De wetenschap weet dat in de 20e eeuw
             de beloning methode alleen werkt bij een verrassend nauwe band van omstandigheden. Als/dan beloningen vernietigen creativiteit en het geheim tot hoge prestatie is niet beloning en straf, maar de opdringerige drive om dingen te doen die ertoe
-            doen.</p><br>
+            doen.
+        </p><br>
     </div>
 
     <div class="div-performance">
