--- a/dashboard.html
+++ b/dashboard.html
@@ -26,14 +26,14 @@
         <tr id="dbtr">
             <th rowspan="2" class="table-blok">Blok 1</th>
             <th class="table-main-passed">Opleidings- en beroepsorientatie</th>
-            <th class="table-main-active">Computer Science Basics</th>
-            <th class="table-main-active">Programming Basics</th>
+            <th class="table-main-passed">Computer Science Basics</th>
+            <th class="table-main-passed">Programming Basics</th>
             <th rowspan="4" class="table-sub-inactive"></th>
         </tr>
         <tr id="dbtr">
             <td class="table-sub-passed">OBO<br>CU75001<br>2,5 EC</td>
-            <td class="table-sub-active">CBA<br>CU75002<br>7,5 EC</td>
-            <td class="table-sub-active">PBA<br>CU75003<br>5 EC</td>
+            <td class="table-sub-passed">CBA<br>CU75002<br>7,5 EC</td>
+            <td class="table-sub-passed">PBA<br>CU75003<br>5 EC</td>
         </tr>
         <tr id="dbtr">
             <td rowspan="2" class="table-blok">Blok 2
@@ -81,7 +81,7 @@
     <p class="p-green">Groen betekent gehaald</p>
     <p class="p-red">Rood betekent niet gehaald</p>
 
-    <h1 class="h1">TOTALE EC'S: 0 EC!<br>NODIGE EC'S: 45 EC'S!<br>NOG NODIG: 45 EC'S!</h1><br><br><br>
+    <h1 class="h1">TOTALE EC'S: 15 EC!<br>NODIGE EC'S: 45 EC'S!<br>NOG NODIG: 30 EC'S!</h1><br><br><br>
 
     <h1 class="h1">Studeer Handleiding!</h1>
     <a class="linkdb" href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen" target="_blank">Onderwijs-en examenregelingen</a><br>
