Updated the dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
             <th class="table-main-passed">Opleidings- en beroepsorientatie</th>
             <th class="table-main-passed">Computer Science Basics</th>
             <th class="table-main-passed">Programming Basics</th>
-            <th rowspan="4" class="table-sub-inactive"></th>
+            <th rowspan="4" class="table-sub-passed"></th>
         </tr>
         <tr id="dbtr">
             <td class="table-sub-passed">OBO<br>CU75001<br>2,5 EC</td>
@@ -38,14 +38,14 @@
         <tr id="dbtr">
             <td rowspan="2" class="table-blok">Blok 2
             </td>
-            <td class="table-main-inactive">Professional Skills 1</td>
-            <td class="table-main-inactive">HZ Personality 1</td>
-            <td class="table-main-inactive">Object-oriented Programming</td>
+            <td class="table-main-passed">Professional Skills 1</td>
+            <td class="table-main-passed">HZ Personality 1</td>
+            <td class="table-main-passed">Object-oriented Programming</td>
         </tr>
         <tr id="dbtr">
-            <td class="table-sub-inactive">PSK1<br>CU750015<br>2,5 EC</td>
-            <td class="table-sub-inactive">HZP1<br>CU20096<br>2,5 EC</td>
-            <td class="table-sub-inactive">OPR<br>CU75004<br>10 EC</td>
+            <td class="table-sub-passed">PSK1<br>CU750015<br>2,5 EC</td>
+            <td class="table-sub-passed">HZP1<br>CU20096<br>2,5 EC</td>
+            <td class="table-sub-passed">OPR<br>CU75004<br>10 EC</td>
         </tr>
         <tr id="dbtr">
             <td rowspan="2" class="table-blok">Blok 3
