Updated the dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -50,16 +50,16 @@
         <tr id="dbtr">
             <td rowspan="2" class="table-blok">Blok 3
             </td>
-            <td class="table-main-inactive">Professional Skills 2</td>
-            <td class="table-main-inactive">Professionele werkplek</td>
-            <td class="table-main-inactive">Framework development 1</td>
-            <td class="table-main-inactive">Framework project 1</td>
+            <td class="table-main-active">Professional Skills 2</td>
+            <td class="table-main-active">Professionele werkplek</td>
+            <td class="table-main-passed">Framework development 1</td>
+            <td class="table-main-active">Framework project 1</td>
         </tr>
         <tr id="dbtr">
-            <td class="table-sub-inactive">PSK2<br>CU75006<br>2,5 EC</td>
-            <td class="table-sub-inactive">PWE<br>CU75007<br>2,5 EC</td>
-            <td class="table-sub-inactive">FDE1<br>CU75008<br>5 EC</td>
-            <td class="table-sub-inactive">FPR1<br>CU75009<br>5 EC</td>
+            <td class="table-sub-active">PSK2<br>CU75006<br>2,5 EC</td>
+            <td class="table-sub-active">PWE<br>CU75007<br>2,5 EC</td>
+            <td class="table-sub-passed">FDE1<br>CU75008<br>5 EC</td>
+            <td class="table-sub-active">FPR1<br>CU75009<br>5 EC</td>
         </tr>
         <tr id="dbtr">
             <td rowspan="2" class="table-blok">Blok 4
