Updated the dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -39,12 +39,12 @@
             <td rowspan="2" class="table-blok">Blok 2
             </td>
             <td class="table-main-passed">Professional Skills 1</td>
-            <td class="table-main-passed">HZ Personality 1</td>
+            <td class="table-main-active">HZ Personality 1</td>
             <td class="table-main-passed">Object-oriented Programming</td>
         </tr>
         <tr id="dbtr">
             <td class="table-sub-passed">PSK1<br>CU750015<br>2,5 EC</td>
-            <td class="table-sub-passed">HZP1<br>CU20096<br>2,5 EC</td>
+            <td class="table-sub-active">HZP1<br>CU20096<br>2,5 EC</td>
             <td class="table-sub-passed">OPR<br>CU75004<br>10 EC</td>
         </tr>
         <tr id="dbtr">
@@ -81,7 +81,7 @@
     <p class="p-green">Groen betekent gehaald</p>
     <p class="p-red">Rood betekent niet gehaald</p>
 
-    <h1 class="h1">TOTALE EC'S: 15 EC!<br>NODIGE EC'S: 45 EC'S!<br>NOG NODIG: 30 EC'S!</h1><br><br><br>
+    <h1 class="h1">TOTALE EC'S: 32.5 EC!<br>NODIGE EC'S: 60 EC'S!<br>NOG NODIG: 27.5 EC'S!</h1><br><br><br>
 
     <h1 class="h1">Studeer Handleiding!</h1>
     <a class="linkdb" href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen" target="_blank">Onderwijs-en examenregelingen</a><br>
